ajuste para swagger
